--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                       <a class="nav-link rounded" href="#SubstanceUse">Substance Use</a>
                   </nav>
             </div>
-            <div class="col-8 col-lg-9">
+            <div class="col-6 col-lg-7">
                 <div data-bs-spy="scroll" data-bs-target="#FormNav" data-bs-smooth-scroll="true" class="" tabindex="0">
                     <h4>
                     Introduction: There are programs to help people with needs that can affect their health, but they aren’t reaching everyone who may need them. Are there things you need help with?
@@ -42,7 +42,7 @@
                         <!-- Food Security (0-3; 1: medium risk, 2: high risk, 3: imminent risk) -->
                         <div id="FoodSecurity" class="mb-5">
                         <h4 class="mb-3">Food Security</h4>
-                        <div class="mb-3">
+                        <div class="mb-4">
                             <label class="form-label">
                             1. Do you have food for tonight? (Y/N)
                             </label>
@@ -60,7 +60,7 @@
                             </label>
                             </div>
                         </div>
-                        <div class="mb-3">
+                        <div class="mb-4">
                             <label class="form-label">
                             2. Within the past 12 months, did you worry that your food would run out before you got money to buy more? (Y/N)
                             </label>
@@ -78,7 +78,7 @@
                             </label>
                             </div>
                         </div>
-                        <div class="mb-3">
+                        <div class="mb-4">
                             <label class="form-label">
                             3. Within the past 12 months, did the food you bought just not last and you didn’t have money to get more? (Y/N)
                             </label>
@@ -100,7 +100,7 @@
                         <!-- Housing Security/Utilities (0-4; 1: medium risk, 2: high risk, 4: imminent risk) -->
                         <div id="HouseSecurity" class="mb-5">
                             <h4 class="mb-3">House Security</h4>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 4. Do you have somewhere safe to sleep tonight? (Y/N)
                                 </label>
@@ -118,7 +118,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 5. Do you have housing? (Y/N)
                                 </label>
@@ -136,7 +136,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 6. Are you worried about losing your housing? (Y/N)
                                 </label>
@@ -154,7 +154,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 7. Within the past 12 months, have you or your family members you live with been unable to get utilities (heat, electricity) when it was really needed? (Y/N)
                                 </label>
@@ -215,7 +215,7 @@
                         <!-- Interpersonal Safety (0-4; 1: medium risk, 2: high risk, 4: imminent risk) -->
                         <div id="InterpersonalSafety" class="mb-5">
                             <h4 class="mb-3">Interpersonal Safety</h4>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 10. Do you feel physically and emotionally safe where you currently live? (Y/N)
                                 </label>
@@ -233,7 +233,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 11. Within the past 12 months, have you been hit, slapped, kicked or otherwise physically hurt by someone? (Y/N)
                                 </label>
@@ -251,7 +251,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 12. Within the past 12 months, have you been humiliated or emotionally abused in other ways by your partner or ex-partner? (Y/N)
                                 </label>
@@ -274,7 +274,7 @@
                         <!-- Suicide (1-5; 1: high risk, 5: imminent risk) -->
                         <div id="Suicide" class="mb-5">
                             <h4 class="mb-3">Suicide</h4>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 13. Are you having thoughts of killing yourself right now? (Y/N)
                                 </label>
@@ -292,7 +292,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 14. In the past few weeks, have you wished you were dead? (Y/N)
                                 </label>
@@ -310,7 +310,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 15. In the past few weeks, have you felt that you or your family would be better off if you were dead? (Y/N)
                                 </label>
@@ -328,7 +328,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 16. In the past week, have you been having thoughts about killing yourself? (Y/N)
                                 </label>
@@ -346,7 +346,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 17. Have you ever tried to kill yourself? (Y/N)
                                 </label>
@@ -372,7 +372,7 @@
                             <h4 class="mb-3">Depression</h4>
                             <h6 class="lead fst-italic">Intro: Over the last 2 weeks, how often have you been bothered by the following problems?</h6>
                             <br>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 18a. Little interest or pleasure in doing things?
                                 </label>
@@ -402,7 +402,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 18b. Feeling down, depressed, or hopeless?
                                 </label>
@@ -436,7 +436,7 @@
                         <!-- Stress/Emotional Health (0-4; 2: medium risk, 3: high risk, 4: imminent risk) -->
                         <div id="Stress" class="mb-5">
                             <h4 class="mb-3">Stress</h4>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 19. Stress means a situation in which a person feels tense, restless, nervous, or anxious, or is unable to sleep at night because his or her mind is troubled all the time. Do you feel this kind of stress these days?
                                 </label>
@@ -489,7 +489,7 @@
                                 illicit or illegal drug use, but we only ask in order to identify community
                                 services that may be available to help you.</h6>
                                 <br>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 20a. How many times in the past 12 months have you had 5 or more drinks in a day (males) or 4 or more drinks in a day (females)? One drink is 12 ounces of beer, 5 ounces of wine, or 1.5 ounces of 80-proof spirits.
                                 </label>
@@ -525,7 +525,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 20b. How many times in the past 12 months have you used prescription drugs for non-medical reasons?
                                 </label>
@@ -561,7 +561,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 20c. How many times in the past 12 months have you used illegal drugs?
                                 </label>
@@ -597,7 +597,7 @@
                                 </label>
                                 </div>
                             </div>
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <label class="form-label">
                                 20d. How many times in the past 12 months have you used tobacco products (like cigarettes, cigars, snuff, chew, electronic cigarettes)?
                                 </label>
@@ -642,5 +642,6 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
